PP-14820: Convert integration tests to JUnit 5